--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small bg-secondary pt-4">
+<footer class="page-footer font-small pt-4">
 
     <div class="container">
         <div class="row">
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <div class="footer-copyright bg-dark text-center py-3">
+    <div class="footer-copyright text-center py-3">
         <span class="text-light"> © 2021 Copyright: </span>
         <a class="text-light" target="_blank" href="https://www.linkedin.com/in/thanailde-rodrigues0707/">
         Thana Rodrigues</a>
