Implementando estilização nas páginas entrar e cadastrar.

--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,9 +1,17 @@
 #img-bg{
-    background-image: url('https://i.imgur.com/YEgvzTq.png');
+    background-image: url('https://i.imgur.com/FhZwXJ9.png');
 
     min-height: 753px;
 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.container-fluid{
+    background-color: #FFA299;
+}
+
+.texto{
+    color: white;
 }
