--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -6,7 +6,7 @@
         <div class="col-md-6 mt-5 mb-5">
 
             <div class="row d-flex justify-content-center">
-                <div class="col-md-10">
+                <div class="col-md-10 texto">
 
                     <h1 class="text-center">Cadastro</h1>
 
