--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -3,7 +3,7 @@
 <div class="row align-items-center">
     <div class="col-md-6">
         <div class="row d-flex justify-content-center">
-            <div class="col-md-6">
+            <div class="col-md-6 text">
 
                 <h1 class="text-center mb-3">Entrar</h1>
 
