Implementação de rotas no projeto.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-entrar></app-entrar> -->
-<app-cadastrar></app-cadastrar>
+<!-- <app-cadastrar></app-cadastrar> -->
+<router-outlet></router-outlet>
 
