--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
 <!-- <app-entrar></app-entrar> -->
 <!-- <app-cadastrar></app-cadastrar> -->
+
+
+<app-menu *ngIf='auth.logado()'></app-menu>
+
 <router-outlet></router-outlet>
+
+<app-rodape *ngIf='auth.logado()'></app-rodape>
+
+
 
