--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -87,7 +87,7 @@
           </div>
 
           <div class="form-group">
-            <label for="texto">Escolha um tema <a href="">cadastre um novo</a>: </label>
+            <label for="texto">Escolha um tema <a data-dismiss="modal" routerLink='/tema'>cadastre um novo</a>: </label>
            <select name="tema" id="tema" class="form-control">
              <option value="">Temas</option>
            </select>
