--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -38,23 +38,61 @@
 
           <a class="nav-item nav-link active navtext-color font-weight-bold" id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as postagens</a>
 
-          <a class="nav-item nav-link navtext-color font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas postagens</a>
+          <a (click)='findByIdUsuario()' class="nav-item nav-link navtext-color font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas postagens</a>
 
           <a class="nav-item nav-link navtext-color font-weight-bold" id="nav-postagemTema-tab" data-toggle="tab" href="#postagemTema" role="tab" aria-controls="nav-postagemTema" aria-selected="false">Postagens por tema</a>
 
         </div>
       </nav>
 
-      <div class="tab-content" id="nav-tabContent">
+      <div class="tab-content mt-5" id="nav-tabContent">
+
+        <!-- todo Cards TODAS AS POSTAGENS -->
         <div class="tab-pane fade show active" id="nav-todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
-            Todas as postagens
+            
+          <div class="card-columns">
+            <div class="card text-center" *ngFor='let item of listaPostagens'>
+              <div class="card-body">
+                <h5 class="card-title">{{item.titulo}}</h5>
+                <small class="text-muted">Tema: {{item.tema.descricao}}</small>
+                <p class="card-text mt-3">{{item.texto}}</p>
+                <p class="card-text mt-3"><small class="text-muted">
+                  {{item.date | date: 'dd/MM/yyyy'}} às {{item.date | date: 'HH:mm'}}
+                </small></p>
+
+                <p class="card-text"><small class="text-muted">
+                  by: {{item.usuario.nome}}
+                </small></p>
+              </div>
+            </div>
+          </div>
+
+
         </div>
 
-        <div class="tab-pane fade" id="nav-minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
-            Minhas postagens
+        <!-- todo Cards MINHAS POSTAGENS -->
+
+        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
+            
+          <div class="card-columns">
+            <div class="card text-center" *ngFor='let postagem of usuario.postagem'>
+              <div class="card-body">
+                <h5 class="card-title">{{postagem.titulo}}</h5>
+                <small class="text-muted">Tema: {{postagem.tema.descricao}}</small>
+                <p class="card-text mt-3">{{postagem.texto}}</p>
+                <p class="card-text mt-3"><small class="text-muted">
+                  {{postagem.date | date: 'dd/MM/yyyy'}} às {{postagem.date | date: 'HH:mm'}}
+                </small></p>
+
+              </div>
+            </div>
+          </div>
+
         </div>
 
-        <div class="tab-pane fade" id="nav-postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
+        <!-- todo Cards POSTAGENS POR TEMA -->
+
+        <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
             Postagens por tema
         </div>
       </div>
@@ -78,25 +116,27 @@
 
           <div class="form-group">
             <label for="titulo">Título</label>
-            <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+            <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo" placeholder="Digite o título">
           </div>
 
           <div class="form-group">
             <label for="texto">Texto</label>
-           <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
+           <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"></textarea>
           </div>
 
           <div class="form-group">
             <label for="texto">Escolha um tema <a data-dismiss="modal" routerLink='/tema'>cadastre um novo</a>: </label>
-           <select name="tema" id="tema" class="form-control">
-             <option value="">Temas</option>
+           <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
+             <option *ngFor='let item of listaTemas' value="{{item.id}}">
+               {{item.descricao}}
+             </option>
            </select>
           </div>
 
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-success">Publicar</button>
+          <button type="button" class="btn btn-success" (click)='publicar()' data-dismiss="modal">Publicar</button>
         </div>
       </div>
     </div>
