--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -36,11 +36,11 @@
     <nav>
         <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
 
-          <a class="nav-item nav-link active navtext-color font-weight-bold" id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as postagens</a>
+          <a class="nav-item nav-link active navtext-color font-weight-bold" id="nav-todasPostagens-tab" data-toggle="tab" data-target="#nav-todasPostagens" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as postagens</a>
 
-          <a (click)='findByIdUsuario()' class="nav-item nav-link navtext-color font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas postagens</a>
+          <a (click)='findByIdUsuario()' class="nav-item nav-link navtext-color font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" data-target="#minhasPostagens" href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas postagens</a>
 
-          <a class="nav-item nav-link navtext-color font-weight-bold" id="nav-postagemTema-tab" data-toggle="tab" href="#postagemTema" role="tab" aria-controls="nav-postagemTema" aria-selected="false">Postagens por tema</a>
+          <a class="nav-item nav-link navtext-color font-weight-bold" id="nav-postagemTema-tab" data-toggle="tab" data-target="#postagemTema" href="#postagemTema" role="tab" aria-controls="nav-postagemTema" aria-selected="false">Postagens por tema</a>
 
         </div>
       </nav>
