--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -93,7 +93,24 @@
         <!-- todo Cards POSTAGENS POR TEMA -->
 
         <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
-            Postagens por tema
+            
+          <div class="card-columns" *ngFor='let tema of listaTemas'>
+            <div class="card text-center" *ngFor='let postagem of tema.postagem'>
+              <div class="card-body">
+                <h5 class="card-title">{{postagem.titulo}}</h5>
+                <p class="card-text mt-3">{{postagem.texto}}</p>
+                <p class="card-text mt-3"><small class="text-muted">
+                  {{postagem.date | date: 'dd/MM/yyyy'}} às {{postagem.date | date: 'HH:mm'}}
+                </small></p>
+                
+                <p class="card-text"><small class="text-muted">
+                  by: {{postagem.usuario.nome}}
+                </small></p>
+
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
 
