--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -84,6 +84,9 @@
                   {{postagem.date | date: 'dd/MM/yyyy'}} às {{postagem.date | date: 'HH:mm'}}
                 </small></p>
 
+                <a [routerLink]="['/postagem-edit', postagem.id]" class="text-info mr-3" href="">Editar</a>
+                <a [routerLink]="['/postagem-delete', postagem.id]" class="text-danger" href="">Apagar</a>
+
               </div>
             </div>
           </div>
