--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -51,7 +51,8 @@
         <div class="tab-pane fade show active" id="nav-todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
             
           <div class="card-columns">
-            <div class="card text-center" *ngFor='let item of listaPostagens'>
+            <div class="card text-center" 
+            *ngFor='let item of listaPostagens | orderBy : key : reverse'>
               <div class="card-body">
                 <h5 class="card-title">{{item.titulo}}</h5>
                 <small class="text-muted">Tema: {{item.tema.descricao}}</small>
@@ -75,7 +76,7 @@
         <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
             
           <div class="card-columns">
-            <div class="card text-center" *ngFor='let postagem of usuario.postagem'>
+            <div class="card text-center" *ngFor='let postagem of usuario.postagem | orderBy : key : reverse'>
               <div class="card-body">
                 <h5 class="card-title">{{postagem.titulo}}</h5>
                 <small class="text-muted">Tema: {{postagem.tema.descricao}}</small>
@@ -98,7 +99,7 @@
         <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
             
           <div class="card-columns" *ngFor='let tema of listaTemas'>
-            <div class="card text-center" *ngFor='let postagem of tema.postagem'>
+            <div class="card text-center" *ngFor='let postagem of tema.postagem | orderBy : key : reverse'>
               <div class="card-body">
                 <h5 class="card-title">{{postagem.titulo}}</h5>
                 <p class="card-text mt-3">{{postagem.texto}}</p>
