--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -47,8 +47,19 @@
 
       <div class="tab-content mt-5" id="nav-tabContent">
 
-        <!-- todo Cards TODAS AS POSTAGENS -->
         <div class="tab-pane fade show active" id="nav-todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
+
+
+          <!-- ! Row que contém a barra de pesquisa -->
+          <div class="row d-flex justify-content-center mt-5 mb-5">
+            <div class="col-md-4">
+              <div class="form-group">
+                <input type="text" class="form-control" id="titulo" placeholder="Digite um titulo de postagem para pesquisar" [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'>
+              </div>
+            </div>
+          </div>
+
+          <!-- todo Cards TODAS AS POSTAGENS -->
             
           <div class="card-columns">
             <div class="card text-center" 
@@ -97,6 +108,15 @@
         <!-- todo Cards POSTAGENS POR TEMA -->
 
         <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
+
+          <!-- ! Row que contém a barra de pesquisa -->
+          <div class="row d-flex justify-content-center mt-5 mb-5">
+            <div class="col-md-4">
+              <div class="form-group">
+                <input type="text" class="form-control" id="titulo" placeholder="Digite um tema para pesquisar" [(ngModel)]='descricaoTema' (keyup)='findByDescricaoTema()'>
+              </div>
+            </div>
+          </div>
             
           <div class="card-columns" *ngFor='let tema of listaTemas'>
             <div class="card text-center" *ngFor='let postagem of tema.postagem | orderBy : key : reverse'>
